<resources>
    <string name="app_name">Airchat</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="re_password">Повторите пароль</string>
    <string name="log_in">Войти</string>
    <string name="do_registr">Зарегистрироваться</string>
    <string name="screenlockmsg">Запретить гаснуть экран?</string>
    <string name="authorization">Вход</string>
    <string name="version">Версия</string>
    <string name="my_friends">Мои друзья</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="del_friend">Удалить друга</string>
    <string name="del_friend_success">Друг успешно удален из вашего списка</string>
    <string name="del_friend_error">Ошибка</string>
    <string name="add_friend_success">Друг успешно добавлен</string>
    <string name="add_friend_error">Ошибка</string>
    <string name="no_friends">У вас нет друзей</string>
    <string name="nic">Ник</string>
    <string name="color">Цвет ника</string>
    <string name="do_registration">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="chats">Комнаты</string>
    <string name="profile">Профиль</string>
    <string name="my_photos">Мои фотографии</string>
    <string name="my_gifts">Мои подарки</string>
    <string name="sextext">Пол</string>
    <string name="add_category">Добавить категорию</string>
    <string name="add_chat">Добавить комнату</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="edit_category">Изменить категорию</string>
    <string name="please_wait">Подождите...</string>
    <string name="ok">Ок</string>
    <string name="login_is_exist">Логин слишком короткий или уже занят</string>
    <string name="password_not_correct">Пароль слишком короткий или не совпадает</string>
    <string name="short_nic">Укажите ник</string>
    <string name="registration_error">Во время регистрации произошла ошибка, проверьте данные и подключение к сети</string>
    <string name="select_color">Выбирите цвет</string>
    <string name="cancel">Отмена</string>
    <string name="name">Название</string>
    <string name="login_error">Не удалось авторизоваться, проверьте введеные данные и подключение к сети</string>
    <string name="version_error">Ваша версия клиента устарела. Для входа в чат необходимо установить обновление.</string>
    <string name="access">Доступ</string>
    <string name="user_user">Пользователь</string>
    <string name="user_banned">Забаненный</string>
    <string name="user_invisible">Невидимка</string>
    <string name="user_moder">Модератор</string>
    <string name="user_admin">Администратор</string>
    <string name="create_category">Создание категории</string>
    <string name="create">Создать</string>
    <string name="done">Готово</string>
    <string name="create_room">Создание категории</string>
    <string name="edited_category">Изменение категории</string>
    <string name="error_edit_category">Не удалось отредактировать категорию, у вас может не хватать прав доступа или отсутствует соединение с интернетом</string>
    <string name="cant_edit_category">Эту категорию нельзя изменить</string>
    <string name="edit">Изменить</string>
    <string name="deleted_category">Удаление категории</string>
    <string name="error_delete_category">Не удалось удалить категорию</string>
    <string name="cant_delete_category">Вы не можете удалить эту категорию</string>
    <string name="ask_delete_category">Хотите удалить категорию</string>
    <string name="user_nic"></string>
    <string name="message">Сообщение</string>
    <string name="user_first_name">Имя</string>
    <string name="user_last_name">Фамилия</string>
    <string name="user_city">Город</string>
    <string name="user_bday">Дата рождения</string>
    <string name="user_type">Группа</string>
    <string name="user_about">О себе</string>
    <string name="type_banned">Забанненый</string>
    <string name="type_user">Пользователь</string>
    <string name="type_admin">Администратор</string>
    <string name="type_moder">Модератор</string>
    <string name="type_invisible">Невидимка</string>
    <string name="load_user">Загрузка пользователя</string>
    <string name="load_user_error">Не удалось загрузить информацию о пользователе</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="save">Сохранить</string>
    <string name="edit_profile_error">Не удалось изменить профиль, возможно у вас нет на это прав или отсутствует подключение к сети</string>
    <string name="chat">Чат</string>
    <string name="chat_room_error">Не удалось определить чат</string>
    <string name="delete_chat">Удалить комнату</string>
    <string name="edit_chat">Изменить комнату</string>
    <string name="send_message">Отправка сообщения</string>
    <string name="send_message_error">Не удалось отправить сообщение</string>
    <string name="error_delete_room">Не удалось удалить комнату, может не хватать прав доступа или отсутствовать соединение с сетью</string>
    <string name="deleted_room">Удаление комнаты</string>
    <string name="ask_delete_room">Удалить эту комнату?</string>
    <string name="edited_room">Изменение комнаты</string>
    <string name="error_edit_room">Не удалось отредактировать комнату</string>
    <string name="edit_room">Редактирование комнаты</string>
    <string name="log_out">Выйти</string>
    <string name="log_out_title">Выход</string>
    <string name="log_out_ask">Выйти из вашего аккаунта</string>
    <string name="rooms">Комнаты</string>
    <string name="avatar_select">Выбор аватара</string>
    <string name="not_set">Не выбрана</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="select_file">Выбрать файл</string>
    <string name="attachment_select">Выбор вложения</string>
    <string name="no_permission">Необходимо разрешить доступ к памяти устройства</string>
    <string name="create_photo">Сделать снимок</string>
    <string name="add_attachment_error">Не удалось прикрепить фложение</string>
    <string name="add_attachment" >Вложение</string>
    <string name="add_attachment_upload_error">Не удалось отправить вложение</string>
    <string name="attachments">Вложения</string>
    <string name="attachment">Вложение</string>
    <string name="people_in_chat">Участники</string>
    <string name="usrs_in_chat">Пользователи в чате</string>
    <string name="load_users_error">не удалось загрузить пользователей в чате</string>
    <string name="pm_messages">Приватные чаты</string>
    <string name="openDrawer">Открыть</string>
    <string name="closeDrawer">Закрыть</string>
    <string name="image_preview">Изображение</string>
    <string name="nic_spaces">Ник не может состоять из одних пробелов</string>
    <string name="send_message_error_limit">Нельзя отправлять так часто сообщения</string>
    <string name="you_kicked">Администрация запретила вам доступ к этому чату</string>
    <string name="user_kicked">Пользователь выкинут из чата</string>
    <string name="user_kicked_error">Не удалось выкинуть пользователя из чата</string>
    <string name="user_un_kicked_error">Не удалось вернуть пользователя в чат</string>
    <string name="user_un_kicked">Пользователь возвращен в чат</string>
    <string name="show_profile">Профиль</string>
    <string name="paste">Ответить</string>
    <string name="kick">Кикнуть</string>
    <string name="kicked">Кикнутые</string>
    <string name="unkick_ask">Разблокировать пользователя?</string>
    <string name="yes">Да</string>
    <string name="kicked_users">Кикнутые пользователи</string>
    <string name="ban_time">Срок бана</string>
    <string name="ban_description">Причина бана</string>
    <string name="do_ban">Забанить</string>
    <string name="user_banned_done">Пользователь забанен</string>
    <string name="user_banned_error">Не удалось забанить пользователя</string>
    <string name="ban_user">Забанить</string>
    <string name="banned">Забаненные</string>
    <string name="moders">Модераторы</string>
    <string name="admins_list">Администраторы</string>
    <string name="user_unbanned_done">Пользователь разбанен</string>
    <string name="user_unbanned_error">Ошибка снятия бана</string>
    <string name="unban_user">Разбанить</string>
    <string name="unban_ask">Разбанить пользователя?</string>
    <string name="no_banned">Никто не забанен</string>
    <string name="no_moders">Нет модераторов</string>
    <string name="no_admins">Нет администраторов</string>
    <string name="user_superban_done">Пользователь заблокирован</string>
    <string name="user_superban_error">Не удалось заблокировать пользователя</string>
    <string name="superban_user">Заблокировать</string>
    <string name="superban_ask">Полностью заблокировать пользователя?</string>
    <string name="admins">Администрация</string>
    <string name="avatars">Аватарки</string>
    <string name="add_Avatar">Добавить аватарку</string>
    <string name="not_load_avatars">Не удалось загрузить аватары</string>
    <string name="select_avatar">Выбрать аватар</string>
    <string name="price_create">Цена в руб.</string>
    <string name="add_avatar">Новый аватар</string>
    <string name="add">Добавить</string>
    <string name="add_avatar_no_data">Не всё заполнено или не выбрана аватарка</string>
    <string name="error_add_avatar">Не удалось добавить аватар</string>
    <string name="error_upload_avatar">Не удалось выгрузить аватар, установите аватарке изображение, в списке она есть</string>
    <string name="add_avatar_done">Аватар % успешно добавлен</string>
    <string name="delete">Удалить</string>
    <string name="set_default_for_group">Установить по умолчанию</string>
    <string name="delete_avatar_ask">Удалить аватарку?</string>
    <string name="delete_avatar">Удаление аватарки</string>
    <string name="error_delete_avatar">Не удалось удалить аватарку</string>
    <string name="done_delete_avatar">Уватарка успешно удалена</string>
    <string name="error_update_avatar">Не получилось обновить аватар</string>
    <string name="update_avatar">Обновление аватара</string>
    <string name="update_avatar_done">Аватар % обновлен</string>
    <string name="update">Обновить</string>
    <string name="set_default_for_group_users">Установить по умолчанию для</string>
    <string name="set_default_for_group_error">Не удалось выставить по умолчанию</string>
    <string name="set_default_for_group_done">Аватар назначен по умолчанию</string>
    <string name="balance">Баланс</string>
    <string name="load_avatars">Загрузка аватарок</string>
    <string name="balance_limit">У вас не достаточно средств</string>
    <string name="invisbles">Невидимки</string>
    <string name="description">Описание</string>
    <string name="private_access">Приватный доступ</string>
    <string name="gifts">Подарки</string>
    <string name="select_gift">Выбрать подарок</string>
    <string name="send_gift">Подарить подарок</string>
    <string name="virt_zags">Виртуальный загс</string>
    <string name="chat_portal">Сервисы</string>
    <string name="to_zags">Вступить в брак</string>
    <string name="size_ava">Размер аватарок</string>
    <string name="size_text">Размер текста сообщений</string>
    <string name="size_text_chaters">Размера текста списка чатеров</string>
    <string name="size_rooms">Размер текста в списке комнат</string>
    <string name="kb_hide">Закрывать клавиатуру после отправки сообщения?</string>
    <string name="pushmsg">Уведомления в строке состояния?</string>
    <string name="autoenterchat">Заходить автоматически?</string>
    <string name="settings">Настройки</string>
    <string name="rules">Правила чата</string>
    <string name="add_friend_balance">Пополнить баланс</string>
    <string name="device_ban_user">Заблокировать устройство</string>
    <string name="banned_devices">Заблокированные устройства</string>
</resources>