<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_chat_add_attachment"
        android:title="@string/add_attachment"
        android:icon="@drawable/ic_attach_file_white_24dp"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_chat_pm"
        android:icon="@drawable/ic_chat_white_24dp"
        android:title="@string/pm_messages"
        app:showAsAction="always" />
    ik
    <item
        android:id="@+id/menu_chat_people"
        android:title="@string/people_in_chat"
        android:icon="@drawable/ic_people_white_24dp"
        app:showAsAction="always" />



    <item
        android:id="@+id/menu_chat_kicked"
        android:title="@string/kicked_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat_edit_chat"
        android:title="@string/edit_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_chat_delete_chat"
        android:title="@string/delete_chat"
        app:showAsAction="never" />
</menu>