<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat1">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginBottom="3dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/size_ava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_avs"/>
    <SeekBar
        android:max="70"
        android:id="@+id/sb_settings_avas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        />

    <TextView
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/size_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_msg"/>
    <SeekBar
        android:max="30"
        android:id="@+id/sb_settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"/>

    <TextView
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/size_text_chaters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_usr"/>
    <SeekBar
        android:max="25"
        android:id="@+id/sb_settings_chaters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"/>
    <TextView
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/size_rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_rooms"/>
    <SeekBar
        android:max="40"
        android:id="@+id/sb_settings_rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"/>
    <CheckBox
        android:id="@+id/kbhide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kb_hide"
        android:textColor="@color/white"
        android:background="@drawable/rounded_edit_text"
        android:layout_margin="10dp"/>
    <CheckBox
        android:id="@+id/push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pushmsg"
        android:textColor="@color/white"
        android:background="@drawable/rounded_edit_text"
        android:layout_margin="10dp"
        />
    <CheckBox
        android:id="@+id/autoenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autoenterchat"
        android:textColor="@color/white"
        android:background="@drawable/rounded_edit_text"
        android:layout_margin="10dp"/>
    <CheckBox
    android:id="@+id/screenlock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/screenlockmsg"
    android:textColor="@color/white"
    android:background="@drawable/rounded_edit_text"
    android:layout_margin="10dp"/>

</LinearLayout>


</ScrollView>
</LinearLayout>