<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_add_photo_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_portrait_deep_orange_700_48dp" />

        <Button
            android:id="@+id/bt_add_photo_select_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_def"
            android:text="@string/select_photo"
            android:textColor="@color/white" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <EditText
            android:id="@+id/ed_add_photo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chb_add_photo_dialog_private_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/private_access" />
</LinearLayout>